fixed unfurl section and don't get lost in the clouds section so each is fully displayed on mobile. Added media queries to reduce the size of the iframe on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -93,6 +93,7 @@ body {
   flex-direction: column;
   height: 100%;
 
+
   > nav {
     flex: 0 0 auto;
   }
@@ -486,6 +487,21 @@ pre.citation {
   }
 }
 
+.unfurl-section{
+  min-height: 50vh; 
+  margin-top: 15%;
+  @include mobile{
+    margin-top: 25%;
+  }
+}
+.lost-clouds{
+  min-height: 50vh; 
+  margin-top: 10%; 
+  padding: 0 30px 0 30px;
+  @include mobile{
+    margin-top: 50%; 
+  }
+}
 
 .blue {
   color: #00d2d9;
@@ -609,7 +625,7 @@ $brkpoint: 768px;
 
 .subtxt-p {
   @include mobile {
-    padding: 0 50px;
+    padding: 0 50px 100px 50px;
   }
 }
 
@@ -696,3 +712,21 @@ $brkpoint: 768px;
 .margin-l {
   margin-left: 40px;
 }
+
+.frame-dim{
+  height:400px;
+  width:500px;
+  @include mobile {
+   height:400px;
+   width:400px;
+   
+}}
+
+$smallmobile: 375px;
+@media (max-width: $smallmobile) {
+  .frame-dim{
+    height:450px;
+    width:300px;
+}
+}
+
