--- a/assets/css/xterm.css
+++ b/assets/css/xterm.css
@@ -94,7 +94,7 @@
 
 .xterm .xterm-viewport {
   /* On OS X this is required in order for the scroll bar to appear fully opaque */
-  background-color: #000;
+  background: #000;
   overflow-y: scroll;
   cursor: default;
   position: absolute;
